--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
         ::-webkit-scrollbar-thumb:hover {
             background: #718096;
         }
+        /* Style for color input */
+        input[type="color"] {
+            -webkit-appearance: none;
+            border: none;
+            width: 56px; /* w-14 */
+            height: 40px; /* h-10 */
+        }
+        input[type="color"]::-webkit-color-swatch-wrapper {
+            padding: 0;
+        }
+        input[type="color"]::-webkit-color-swatch {
+            border: none;
+            border-radius: 0.375rem; /* rounded-md */
+        }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,8 +83,8 @@
                         <input type="number" id="terrain-width" value="100" class="mt-1 block w-full bg-gray-700 border-gray-600 rounded-md shadow-sm focus:ring-cyan-500 focus:border-cyan-500 sm:text-sm p-2">
                     </div>
                     <div>
-                        <label for="terrain-height" class="block text-sm font-medium text-gray-300">Height</label>
-                        <input type="number" id="terrain-height" value="100" class="mt-1 block w-full bg-gray-700 border-gray-600 rounded-md shadow-sm focus:ring-cyan-500 focus:border-cyan-500 sm:text-sm p-2">
+                        <label for="terrain-length" class="block text-sm font-medium text-gray-300">Length</label>
+                        <input type="number" id="terrain-length" value="100" class="mt-1 block w-full bg-gray-700 border-gray-600 rounded-md shadow-sm focus:ring-cyan-500 focus:border-cyan-500 sm:text-sm p-2">
                     </div>
                 </div>
 
@@ -93,6 +107,21 @@
                  <div>
                     <label for="terrain-amplitude" class="block text-sm font-medium text-gray-300">Amplitude: <span id="terrain-amplitude-value">15</span></label>
                     <input type="range" id="terrain-amplitude" min="1" max="50" step="1" value="15" class="w-full h-2 bg-gray-700 rounded-lg appearance-none cursor-pointer">
+                </div>
+
+                <!-- Color Modification -->
+                <div>
+                    <label class="block text-sm font-medium text-gray-300">Color Gradient</label>
+                    <div class="flex items-center space-x-4 mt-1">
+                        <div>
+                            <label for="color-a" class="block text-xs text-gray-400">Low</label>
+                            <input type="color" id="color-a" value="#ff00ff" class="p-1 h-10 w-14 block bg-gray-700 border-gray-600 cursor-pointer rounded-md">
+                        </div>
+                        <div>
+                            <label for="color-b" class="block text-xs text-gray-400">High</label>
+                            <input type="color" id="color-b" value="#00ffff" class="p-1 h-10 w-14 block bg-gray-700 border-gray-600 cursor-pointer rounded-md">
+                        </div>
+                    </div>
                 </div>
 
                 <!-- Action Buttons -->
@@ -146,6 +175,8 @@
         const messageBox = document.getElementById('message-box');
         const seedInput = document.getElementById('terrain-seed');
         const randomizeSeedBtn = document.getElementById('randomize-seed-btn');
+        const colorAInput = document.getElementById('color-a');
+        const colorBInput = document.getElementById('color-b');
         
         // --- Global Variables ---
         let scene, camera, renderer, controls, currentObject, wireframeObject;
@@ -318,7 +349,7 @@
                     clearScene();
 
                     const width = parseInt(document.getElementById('terrain-width').value) || 100;
-                    const height = parseInt(document.getElementById('terrain-height').value) || 100;
+                    const length = parseInt(document.getElementById('terrain-length').value) || 100;
                     const noiseScale = parseFloat(document.getElementById('noise-scale').value) || 0.1;
                     const amplitude = parseFloat(document.getElementById('terrain-amplitude').value) || 15;
                     const seed = seedInput.value;
@@ -326,12 +357,12 @@
                     const randomFunc = createAlea(seed);
                     const noise2D = createNoise2D(randomFunc);
 
-                    const geometry = new THREE.PlaneGeometry(width, height, width - 1, height - 1);
+                    const geometry = new THREE.PlaneGeometry(width, length, width - 1, length - 1);
                     const positionAttribute = geometry.getAttribute('position');
                     const colors = [];
                     const color = new THREE.Color();
-                    const colorA = new THREE.Color(0xff00ff); // Magenta
-                    const colorB = new THREE.Color(0x00ffff); // Cyan
+                    const colorA = new THREE.Color(colorAInput.value);
+                    const colorB = new THREE.Color(colorBInput.value);
 
                     for (let i = 0; i < positionAttribute.count; i++) {
                         const x = positionAttribute.getX(i);
